[gd_scene load_steps=4 format=3 uid="uid://c8pxq7dy8okh8"]

[ext_resource type="Script" uid="uid://gqvghgm4rlxm" path="res://scripts/ui/MainMenu.gd" id="1_qi05h"]
[ext_resource type="PackedScene" uid="uid://consoledev123" path="res://scenes/ui/DebugConsole.tscn" id="3_console"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bottom_bar"]
bg_color = Color(0.1, 0.1, 0.15, 0.95)
border_width_top = 2
border_color = Color(0.3, 0.3, 0.4, 1)

[node name="MainMenu" type="Control"]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qi05h")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.05, 0.05, 0.1, 1)

[node name="BackgroundTexture" type="TextureRect" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
expand_mode = 1
stretch_mode = 6

[node name="CloudRegion" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 150.0
grow_horizontal = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20

[node name="CloudButton" type="Button" parent="CloudRegion"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 32
text = "â˜ï¸ å¤ªåˆå¤©å¢Ÿ â˜ï¸"

[node name="MapContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -250.0
offset_right = 400.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="MapArea" type="Control" parent="MapContainer"]
custom_minimum_size = Vector2(800, 500)
layout_mode = 2

[node name="CenterVortex" type="Button" parent="MapContainer/MapArea"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -120.0
offset_right = 100.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.5, 0, 0.8, 1)
theme_override_font_sizes/font_size = 24
disabled = true
text = "ğŸŒ€
ä»™é­”ç•Œæµ·
ğŸ”’ æœªè§£é–"

[node name="TrainingArea" type="Button" parent="MapContainer/MapArea"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.9, 0.7, 0.2, 1)
theme_override_font_sizes/font_size = 24
text = "âš”ï¸
æ–·ç•Œä¿®é€”
âœ¨ è¨“ç·´å ´"

[node name="EvolutionArea" type="Button" parent="MapContainer/MapArea"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 160.0
offset_right = 100.0
offset_bottom = 260.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.85, 0.4, 1)
theme_override_font_sizes/font_size = 24
text = "âœ¨
å‡ä»™å°
ğŸŒŸ é€²åŒ–"

[node name="Region1" type="Button" parent="MapContainer/MapArea"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -300.0
offset_right = 80.0
offset_bottom = -200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "ğŸ—» åŒ—åŸŸ
åšåœŸå´‘åŸ"

[node name="Region2" type="Button" parent="MapContainer/MapArea"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 220.0
offset_top = -150.0
offset_right = 380.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "ğŸ”¥ æ±åŸŸ
é›¢ç«çƒˆè’"

[node name="Region3" type="Button" parent="MapContainer/MapArea"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 220.0
offset_top = 50.0
offset_right = 380.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "ğŸŒŠ å—åŸŸ
ç„æ°´å¹½æ·µ"

[node name="Region4" type="Button" parent="MapContainer/MapArea"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -380.0
offset_top = 50.0
offset_right = -220.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "ğŸŒ³ è¥¿åŸŸ
è’¼æœ¨å¤æ—"

[node name="Region5" type="Button" parent="MapContainer/MapArea"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -380.0
offset_top = -150.0
offset_right = -220.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "âš¡ ä¸­åŸŸ
é‡‘é›·å¤©ç½¡"

[node name="BottomBar" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -120.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_bottom_bar")

[node name="HBoxContainer" type="HBoxContainer" parent="BottomBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 4.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="InventoryButton" type="Button" parent="BottomBar/HBoxContainer"]
custom_minimum_size = Vector2(200, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "ğŸ’ èƒŒåŒ…"

[node name="TeamButton" type="Button" parent="BottomBar/HBoxContainer"]
custom_minimum_size = Vector2(200, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "ğŸ‘¥ éšŠä¼"

[node name="ShopButton" type="Button" parent="BottomBar/HBoxContainer"]
custom_minimum_size = Vector2(200, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "ğŸ’° å•†åŸ"

[node name="SettingsButton" type="Button" parent="BottomBar/HBoxContainer"]
custom_minimum_size = Vector2(200, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 28
disabled = true
text = "âš™ï¸ è¨­å®š"

[node name="VersionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -140.0
offset_right = -20.0
offset_bottom = -120.0
grow_horizontal = 0
grow_vertical = 0
text = "v0.2.0 Alpha"
horizontal_alignment = 2

[node name="DebugPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -250.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 200.0
grow_horizontal = 0

[node name="VBoxContainer" type="VBoxContainer" parent="DebugPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="DebugPanel/VBoxContainer"]
layout_mode = 2
text = "ğŸ› ï¸ é–‹ç™¼å·¥å…·"
horizontal_alignment = 1

[node name="ResetSaveButton" type="Button" parent="DebugPanel/VBoxContainer"]
layout_mode = 2
text = "âš ï¸ é‡ç½®å­˜æª”"

[node name="QuitButton" type="Button" parent="DebugPanel/VBoxContainer"]
layout_mode = 2
text = "âŒ é€€å‡ºéŠæˆ²"

[node name="DebugConsole" parent="." instance=ExtResource("3_console")]
