# MainMenu.gd
# ä¸»é¸å–®æ§åˆ¶å™¨ - å…¨æ–°å¤§åœ°åœ–ç‰ˆæœ¬
extends Control

# ==================== ç¯€é»å¼•ç”¨ ====================
# é›²æµ·å€åŸŸ
@onready var cloud_button = $CloudRegion/CloudButton

# äº”å¤§å€åŸŸ
@onready var region1_button = $MapContainer/MapArea/Region1
@onready var region2_button = $MapContainer/MapArea/Region2
@onready var region3_button = $MapContainer/MapArea/Region3
@onready var region4_button = $MapContainer/MapArea/Region4
@onready var region5_button = $MapContainer/MapArea/Region5

# ä¸­å¿ƒæ¼©æ¸¦ï¼ˆä»™é­”ç•Œæµ·ï¼‰
@onready var center_vortex = $MapContainer/MapArea/CenterVortex

# è¨“ç·´å ´ï¼ˆæ–·ç•Œä¿®é€”ï¼‰
@onready var training_area = $MapContainer/MapArea/TrainingArea

# å‡ä»™å°ï¼ˆå¡ç‰‡é€²åŒ–ï¼‰
@onready var evolution_area = $MapContainer/MapArea/EvolutionArea

# åº•éƒ¨å°èˆªæ¬„
@onready var inventory_button = $BottomBar/HBoxContainer/InventoryButton
@onready var team_button = $BottomBar/HBoxContainer/TeamButton
@onready var shop_button = $BottomBar/HBoxContainer/ShopButton
@onready var settings_button = $BottomBar/HBoxContainer/SettingsButton

# ä»»å‹™æŒ‰éˆ•ï¼ˆå‹•æ…‹å‰µå»ºï¼‰
var quest_button: Button = null

# èª¿è©¦é¢æ¿
@onready var debug_panel = $DebugPanel
@onready var reset_save_button = $DebugPanel/VBoxContainer/ResetSaveButton
@onready var quit_button = $DebugPanel/VBoxContainer/QuitButton

# ==================== å€åŸŸé€²åº¦æ•¸æ“š ====================
var region_progress = {
	"region1": false,  # åŒ—åŸŸ - åšåœŸå´‘åŸ
	"region2": false,  # æ±åŸŸ - é›¢ç«çƒˆè’
	"region3": false,  # å—åŸŸ - ç„æ°´å¹½æ·µ
	"region4": false,  # è¥¿åŸŸ - è’¼æœ¨å¤æ—
	"region5": false   # ä¸­åŸŸ - é‡‘é›·å¤©ç½¡
}

# ==================== åˆå§‹åŒ– ====================
func _ready():
	print("ğŸ“± ä¸»é¸å–®è¼‰å…¥å®Œæˆ - å¤§åœ°åœ–ç‰ˆæœ¬")

	# é€£æ¥å€åŸŸæŒ‰éˆ•
	cloud_button.pressed.connect(_on_cloud_region_pressed)
	region1_button.pressed.connect(_on_region_pressed.bind(1))
	region2_button.pressed.connect(_on_region_pressed.bind(2))
	region3_button.pressed.connect(_on_region_pressed.bind(3))
	region4_button.pressed.connect(_on_region_pressed.bind(4))
	region5_button.pressed.connect(_on_region_pressed.bind(5))
	center_vortex.pressed.connect(_on_center_vortex_pressed)
	training_area.pressed.connect(_on_training_area_pressed)
	evolution_area.pressed.connect(_on_evolution_area_pressed)

	# å‰µå»ºä¸¦æ·»åŠ ä»»å‹™æŒ‰éˆ•
	create_quest_button()

	# é€£æ¥åº•éƒ¨å°èˆªæ¬„
	inventory_button.pressed.connect(_on_inventory_pressed)
	team_button.pressed.connect(_on_team_pressed)
	shop_button.pressed.connect(_on_shop_pressed)
	settings_button.pressed.connect(_on_settings_pressed)

	# é€£æ¥èª¿è©¦æŒ‰éˆ•
	reset_save_button.pressed.connect(_on_reset_save_pressed)
	quit_button.pressed.connect(_on_quit_pressed)

	# è¼‰å…¥é€²åº¦ä¸¦æ›´æ–° UI
	load_region_progress()
	update_region_buttons()
	update_training_button()

	# æ’­æ”¾å…¥å ´å‹•ç•«
	play_entrance_animation()

# ==================== é€²åº¦ç³»çµ± ====================
func load_region_progress():
	"""å¾ PlayerDataManager è¼‰å…¥å€åŸŸé€²åº¦"""
	# TODO: å¯¦éš›å¾å­˜æª”è®€å–é€²åº¦
	# ç›®å‰ä½¿ç”¨æ¸¬è©¦æ•¸æ“š
	region_progress["region1"] = true  # é–‹æ”¾ç¬¬ä¸€å€‹å€åŸŸä¾›æ¸¬è©¦
	region_progress["region2"] = false
	region_progress["region3"] = false
	region_progress["region4"] = false
	region_progress["region5"] = false

func update_region_buttons():
	"""æ ¹æ“šé€²åº¦æ›´æ–°æŒ‰éˆ•ç‹€æ…‹"""
	# æ›´æ–°å€åŸŸæŒ‰éˆ•ï¼ˆå·²è§£é–çš„å€åŸŸä¸æœƒè¢«ç¦ç”¨ï¼‰
	# region1_button.disabled = !region_progress["region1"]
	# region2_button.disabled = !region_progress["region2"]
	# region3_button.disabled = !region_progress["region3"]
	# region4_button.disabled = !region_progress["region4"]
	# region5_button.disabled = !region_progress["region5"]

	# æª¢æŸ¥æ˜¯å¦æ‰€æœ‰å€åŸŸéƒ½å·²å®Œæˆ
	var all_regions_completed = (
		region_progress["region1"] and
		region_progress["region2"] and
		region_progress["region3"] and
		region_progress["region4"] and
		region_progress["region5"]
	)

	# æ›´æ–°ä»™é­”ç•Œæµ·æŒ‰éˆ•
	center_vortex.disabled = !all_regions_completed
	if all_regions_completed:
		center_vortex.text = "ğŸŒ€\nä»™é­”ç•Œæµ·\nâœ¨ å·²è§£é–"
		center_vortex.add_theme_color_override("font_color", Color(1, 0.8, 0, 1))
	else:
		center_vortex.text = "ğŸŒ€\nä»™é­”ç•Œæµ·\nğŸ”’ æœªè§£é–"
		center_vortex.add_theme_color_override("font_color", Color(0.5, 0, 0.8, 1))

func update_training_button():
	"""æ›´æ–°è¨“ç·´å ´æŒ‰éˆ•ç‹€æ…‹ï¼ˆæª¢æŸ¥æ˜¯å¦æœ‰è¨“ç·´å®Œæˆï¼‰"""
	var active_training = PlayerDataManager.get_active_training()

	if active_training.has("is_completed") and active_training.is_completed:
		# è¨“ç·´å·²å®Œæˆï¼Œé¡¯ç¤ºæé†’
		training_area.text = "âš”ï¸\næ–·ç•Œä¿®é€”\nâ—è¨“ç·´å®Œæˆ"
		training_area.add_theme_color_override("font_color", Color(1, 0.5, 0.2, 1))  # æ©™ç´…è‰²æé†’
	else:
		# æ­£å¸¸ç‹€æ…‹
		training_area.text = "âš”ï¸\næ–·ç•Œä¿®é€”\nâœ¨ è¨“ç·´å ´"
		training_area.add_theme_color_override("font_color", Color(0.9, 0.7, 0.2, 1))

# ==================== å€åŸŸé¸æ“‡å›èª¿ ====================
func _on_cloud_region_pressed():
	"""å¤ªåˆå¤©å¢Ÿï¼ˆæ´»å‹•/ç‰¹æ®Šé—œå¡ï¼‰"""
	# æª¢æŸ¥å¼·åˆ¶ä»»å‹™
	if not TaskManager.is_action_allowed("navigate_region", {"target": "cloud"}):
		TaskManager.show_mandatory_quest_message()
		return

	print("â˜ï¸ é€²å…¥å¤ªåˆå¤©å¢Ÿ")
	# TODO: é–‹å•Ÿé›²æµ·é—œå¡é¸æ“‡ç•Œé¢
	show_stage_selection("cloud")

func _on_region_pressed(region_id: int):
	"""å€åŸŸæŒ‰éˆ•è¢«é»æ“Š"""
	# æª¢æŸ¥å¼·åˆ¶ä»»å‹™
	if not TaskManager.is_action_allowed("navigate_region", {"target": "region%d" % region_id}):
		TaskManager.show_mandatory_quest_message()
		return

	var region_names = {
		1: "åŒ—åŸŸ - åšåœŸå´‘åŸ",
		2: "æ±åŸŸ - é›¢ç«çƒˆè’",
		3: "å—åŸŸ - ç„æ°´å¹½æ·µ",
		4: "è¥¿åŸŸ - è’¼æœ¨å¤æ—",
		5: "ä¸­åŸŸ - é‡‘é›·å¤©ç½¡"
	}
	print("ğŸ—ºï¸ é€²å…¥å€åŸŸ %d: %s" % [region_id, region_names[region_id]])
	show_stage_selection("region%d" % region_id)

func _on_center_vortex_pressed():
	"""ä»™é­”ç•Œæµ·è¢«é»æ“Š"""
	# æª¢æŸ¥å¼·åˆ¶ä»»å‹™
	if not TaskManager.is_action_allowed("navigate_region", {"target": "vortex"}):
		TaskManager.show_mandatory_quest_message()
		return

	print("ğŸŒ€ é€²å…¥ä»™é­”ç•Œæµ·")
	show_stage_selection("vortex")

func _on_training_area_pressed():
	"""æ–·ç•Œä¿®é€”è¢«é»æ“Š"""
	# æª¢æŸ¥å¼·åˆ¶ä»»å‹™
	if not TaskManager.is_action_allowed("navigate_ui", {"target": "training_area"}):
		TaskManager.show_mandatory_quest_message()
		return

	print("âš”ï¸ é€²å…¥æ–·ç•Œä¿®é€” - è¨“ç·´å ´")
	GameManager.goto_training_select()

func _on_evolution_area_pressed():
	"""å‡ä»™å°è¢«é»æ“Š"""
	# æª¢æŸ¥å¼·åˆ¶ä»»å‹™
	if not TaskManager.is_action_allowed("navigate_ui", {"target": "evolution_area"}):
		TaskManager.show_mandatory_quest_message()
		return

	print("âœ¨ é€²å…¥å‡ä»™å° - å¡ç‰‡é€²åŒ–")
	GameManager.goto_evolution()

func show_stage_selection(region_type: String):
	"""é¡¯ç¤ºé—œå¡é¸æ“‡ç•Œé¢"""
	print("ğŸ“‹ é–‹å•Ÿ %s çš„ç« ç¯€åˆ—è¡¨" % region_type)
	# è·³è½‰åˆ°ç« ç¯€é¸æ“‡ç•Œé¢
	GameManager.goto_chapter_select(region_type)

# ==================== å‰µå»ºä»»å‹™æŒ‰éˆ• ====================
func create_quest_button():
	"""å‹•æ…‹å‰µå»ºä»»å‹™æŒ‰éˆ•ä¸¦æ·»åŠ åˆ°åº•éƒ¨å°èˆªæ¬„"""
	# ç²å–åº•éƒ¨å°èˆªæ¬„çš„ HBoxContainer
	var bottom_hbox = $BottomBar/HBoxContainer
	if bottom_hbox == null:
		print("âŒ æ‰¾ä¸åˆ°åº•éƒ¨å°èˆªæ¬„å®¹å™¨")
		return

	# å‰µå»ºä»»å‹™æŒ‰éˆ•ï¼ˆä½¿ç”¨èˆ‡å…¶ä»–æŒ‰éˆ•ä¸€è‡´çš„é¢¨æ ¼ï¼‰
	quest_button = Button.new()
	quest_button.text = "ğŸ“‹ ä»»å‹™"
	quest_button.custom_minimum_size = Vector2(200, 80)
	quest_button.add_theme_font_size_override("font_size", 28)

	# é€£æ¥ä¿¡è™Ÿ
	quest_button.pressed.connect(_on_quest_pressed)

	# æ·»åŠ åˆ°åº•éƒ¨å°èˆªæ¬„ï¼ˆåœ¨èƒŒåŒ…æŒ‰éˆ•å¾Œé¢ï¼‰
	var inventory_index = inventory_button.get_index()
	bottom_hbox.add_child(quest_button)
	bottom_hbox.move_child(quest_button, inventory_index + 1)

	print("âœ… ä»»å‹™æŒ‰éˆ•å·²æ·»åŠ åˆ°åº•éƒ¨å°èˆªæ¬„")

# ==================== åº•éƒ¨å°èˆªæ¬„å›èª¿ ====================
func _on_inventory_pressed():
	"""èƒŒåŒ…æŒ‰éˆ•"""
	# æª¢æŸ¥å¼·åˆ¶ä»»å‹™
	if not TaskManager.is_action_allowed("navigate_ui", {"target": "inventory"}):
		TaskManager.show_mandatory_quest_message()
		return

	print("ğŸ’ æ‰“é–‹èƒŒåŒ…")
	GameManager.goto_inventory()

func _on_team_pressed():
	"""éšŠä¼æŒ‰éˆ•"""
	# æª¢æŸ¥å¼·åˆ¶ä»»å‹™
	if not TaskManager.is_action_allowed("navigate_ui", {"target": "team"}):
		TaskManager.show_mandatory_quest_message()
		return

	print("ğŸ‘¥ éšŠä¼ç®¡ç†")
	GameManager.goto_team_list()

func _on_shop_pressed():
	"""å•†åŸæŒ‰éˆ•"""
	# æª¢æŸ¥å¼·åˆ¶ä»»å‹™
	if not TaskManager.is_action_allowed("navigate_ui", {"target": "shop"}):
		TaskManager.show_mandatory_quest_message()
		return

	print("ğŸª é€²å…¥å•†åŸ")
	GameManager.goto_shop()

func _on_quest_pressed():
	"""ä»»å‹™æŒ‰éˆ•"""
	# ä»»å‹™ç•Œé¢ä¸å—å¼·åˆ¶ä»»å‹™é™åˆ¶
	print("ğŸ“‹ æŸ¥çœ‹ä»»å‹™")
	GameManager.goto_quest()

func _on_settings_pressed():
	"""è¨­å®šæŒ‰éˆ•ï¼ˆé ç•™ï¼‰"""
	# æª¢æŸ¥å¼·åˆ¶ä»»å‹™
	if not TaskManager.is_action_allowed("navigate_ui", {"target": "settings"}):
		TaskManager.show_mandatory_quest_message()
		return

	print("âš™ï¸ è¨­å®šï¼ˆå°šæœªå¯¦ä½œï¼‰")
	# TODO: é–‹å•Ÿè¨­å®šé¸å–®

# ==================== èª¿è©¦åŠŸèƒ½ ====================
func _on_reset_save_pressed():
	"""é‡ç½®ç©å®¶å­˜æª”"""
	print("âš ï¸ ç©å®¶è¦æ±‚é‡ç½®å­˜æª”...")
	PlayerDataManager.reset_save()
	print("âœ… å­˜æª”å·²é‡ç½®")
	GameManager.goto_main_menu()

func _on_quit_pressed():
	"""é€€å‡ºéŠæˆ²"""
	print("ğŸ‘‹ é€€å‡ºéŠæˆ²")
	GameManager.quit_game()

# ==================== å‹•ç•« ====================
func play_entrance_animation():
	"""æ’­æ”¾å…¥å ´å‹•ç•«"""
	# é›²æµ·å€åŸŸå¾ä¸Šæ–¹æ»‘å…¥
	var cloud_region = $CloudRegion
	var cloud_original_offset = cloud_region.offset_top
	cloud_region.modulate.a = 0
	cloud_region.offset_top = cloud_original_offset - 100

	# åº•éƒ¨å°èˆªæ¬„å¾ä¸‹æ–¹æ»‘å…¥
	var bottom_bar = $BottomBar
	var bottom_original_offset = bottom_bar.offset_top
	bottom_bar.modulate.a = 0
	bottom_bar.offset_top = bottom_original_offset + 100

	# åœ°åœ–å€åŸŸæ·¡å…¥ + ç¸®æ”¾
	var map_container = $MapContainer
	map_container.modulate.a = 0
	map_container.scale = Vector2(0.8, 0.8)

	# å‰µå»ºå‹•ç•«
	var tween = create_tween()
	tween.set_parallel(true)
	tween.set_trans(Tween.TRANS_CUBIC)
	tween.set_ease(Tween.EASE_OUT)

	# é›²æµ·å€åŸŸå‹•ç•«
	tween.tween_property(cloud_region, "modulate:a", 1.0, 0.5)
	tween.tween_property(cloud_region, "offset_top", cloud_original_offset, 0.5)

	# åº•éƒ¨å°èˆªæ¬„å‹•ç•«
	tween.tween_property(bottom_bar, "modulate:a", 1.0, 0.5).set_delay(0.2)
	tween.tween_property(bottom_bar, "offset_top", bottom_original_offset, 0.5).set_delay(0.2)

	# åœ°åœ–å€åŸŸå‹•ç•«
	tween.tween_property(map_container, "modulate:a", 1.0, 0.6).set_delay(0.3)
	tween.tween_property(map_container, "scale", Vector2(1.0, 1.0), 0.6).set_delay(0.3)

# ==================== è¼¸å…¥è™•ç† ====================
func _input(event: InputEvent):
	"""è™•ç†éµç›¤å¿«æ·éµ"""
	if event.is_action_pressed("ui_cancel"):  # ESC éµ
		# åˆ‡æ›èª¿è©¦é¢æ¿é¡¯ç¤º
		debug_panel.visible = !debug_panel.visible

	# F5 åˆ·æ–°é€²åº¦
	if event is InputEventKey and event.keycode == KEY_F5 and event.pressed:
		print("ğŸ”„ åˆ·æ–°å€åŸŸé€²åº¦")
		load_region_progress()
		update_region_buttons()
